# gilbert-plugins

./: CLAUDE.md  README.md
.claude/memory/: MEMORIES.md  memory-guess-that-song.md  memory-plugin-pyproject.md  memory-sonos-spotify-playback.md  memory-unifi-relative-imports.md
anthropic/: anthropic_ai.py  anthropic_vision.py  plugin.py  plugin.yaml  pyproject.toml
anthropic/tests/: conftest.py  test_anthropic_ai.py
arr/: README.md  arr_client.py  plugin.py  plugin.yaml  pyproject.toml  radarr_service.py  sonarr_service.py
arr/tests/: conftest.py  test_arr_plugin.py
bedrock/: bedrock_ai.py  plugin.py  plugin.yaml  pyproject.toml
bedrock/tests/: conftest.py  test_bedrock_ai.py
deepseek/: deepseek_ai.py  plugin.py  plugin.yaml  pyproject.toml
deepseek/tests/: conftest.py  test_deepseek_ai.py
elevenlabs/: elevenlabs_tts.py  plugin.py  plugin.yaml  pyproject.toml
elevenlabs/tests/: conftest.py  test_elevenlabs_tts.py
gemini/: gemini_ai.py  plugin.py  plugin.yaml  pyproject.toml
gemini/tests/: conftest.py  test_gemini_ai.py
google/: gdrive_documents.py  gmail.py  google_auth.py  google_directory.py  plugin.py  plugin.yaml  pyproject.toml
google/tests/: conftest.py  test_gmail_backend.py
groq/: groq_ai.py  plugin.py  plugin.yaml  pyproject.toml
groq/tests/: conftest.py  test_groq_ai.py
guess-that-song/: __init__.py  game.py  plugin.py  plugin.yaml  pyproject.toml  scoring.py  service.py
guess-that-song/tests/: conftest.py
mistral/: mistral_ai.py  plugin.py  plugin.yaml  pyproject.toml
mistral/tests/: conftest.py  test_mistral_ai.py
ngrok/: ngrok_tunnel.py  plugin.py  plugin.yaml  pyproject.toml
ngrok/tests/: conftest.py
ollama/: ollama_ai.py  plugin.py  plugin.yaml  pyproject.toml
ollama/tests/: conftest.py  test_ollama_ai.py
openai/: openai_ai.py  plugin.py  plugin.yaml  pyproject.toml
openai/tests/: conftest.py  test_openai_ai.py
openrouter/: openrouter_ai.py  plugin.py  plugin.yaml  pyproject.toml
openrouter/tests/: conftest.py  test_openrouter_ai.py
qwen/: plugin.py  plugin.yaml  pyproject.toml  qwen_ai.py
qwen/tests/: conftest.py  test_qwen_ai.py
slack/: plugin.py  plugin.yaml  pyproject.toml  slack_service.py
sonos/: plugin.py  plugin.yaml  pyproject.toml  sonos_music.py  sonos_smapi.py  sonos_speaker.py
sonos/tests/: conftest.py  test_sonos_music.py  test_sonos_smapi.py  test_sonos_speaker.py
tavily/: plugin.py  plugin.yaml  pyproject.toml  tavily_search.py
tavily/tests/: conftest.py
tesseract/: plugin.py  plugin.yaml  pyproject.toml  tesseract_ocr.py
tesseract/tests/: conftest.py  test_tesseract_ocr.py
unifi/: access.py  client.py  doorbell.py  name_resolver.py  network.py  plugin.py  plugin.yaml  presence.py  protect.py  pyproject.toml
unifi/tests/: conftest.py  test_unifi_presence.py
xai/: plugin.py  plugin.yaml  pyproject.toml  xai_ai.py
xai/tests/: conftest.py  test_xai_ai.py
