[project]
name = "gilbert-plugin-deepseek"
version = "1.0.0"
description = "DeepSeek AI backend for Gilbert"
requires-python = ">=3.12"
# No third-party deps — talks to DeepSeek's OpenAI-compatible REST API
# directly via ``httpx`` (already a core Gilbert dep).
dependencies = []

[tool.uv]
package = false
