[project]
name = "gilbert-plugin-qwen"
version = "1.0.0"
description = "Qwen (Alibaba DashScope) AI backend for Gilbert"
requires-python = ">=3.12"
# No third-party deps — the backend talks to the DashScope OpenAI-compatible
# REST API directly via ``httpx`` (already a core Gilbert dep). Keeps the
# ``dashscope`` SDK off the dependency tree entirely.
dependencies = []

[tool.uv]
package = false
